clusters/prod-cluster/organizations/numinia/age-of-ai/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyperfy2-numinia-age-of-ai-deployment
  namespace: numinia
  labels:
    environment: pro
    app: age-of-ai
    pod-type: hyperfy2-numinia-age-of-ai
  annotations:
    keda.sh/auto-scaling: "enabled"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: age-of-ai
      environment: pro
      pod-type: hyperfy2-numinia-age-of-ai
  template:
    metadata:
      labels:
        app: age-of-ai
        environment: pro
        pod-type: hyperfy2-numinia-age-of-ai
    spec:
      serviceAccountName: aws-secret-manager-sa
      imagePullSecrets:
        - name: github/deploy
      nodeSelector:
        NodeType: memory
      tolerations:
        - key: workload
          value: memory
          effect: NoSchedule
      volumes:
        - name: hyperfy2-persistent-storage
          persistentVolumeClaim:
            claimName: numinia-shared-pvc
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: hyperfy2-numinia-age-of-ai-aws-secrets
      containers:
        - name: hyperfy2-numinia-age-of-ai
          image: ghcr.io/numengames/numinia-hyperfy2:sha-c7c8a0a157d5c84ef5f1accd56dcada82e527839
          volumeMounts:
            - name: hyperfy2-persistent-storage
              mountPath: /mnt/hyperfy2-persistent-storage
              subPath: age-of-ai
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
          resources:
            requests:
              memory: ${MEMORY}
              cpu: ${CPU}
            limits:
              memory: ${LIMITS_MEMORY}
              cpu: ${LIMITS_CPU}
